--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" light-mode="dark">
 
 <head>
-    <title>John Doe | Home</title>
+    <title>Testyn | Home</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="free portfolio template,portfolio template, portfolio website template, open source, open sourcing, contributing to open source" />
@@ -11,15 +11,15 @@
     <meta name="robots" content="index,follow" />
     <meta name="Googlebot" content="index,follow" />
     <meta name="AdsBot-Google" content="index,follow" />
-    <meta property="og:site_name" content="https://portfolio.smaranjitghose.codes/">
-    <meta property="og:title" content="John Doe | Home">
+    <meta property="og:site_name" content="https://testynhacks.com">
+    <meta property="og:title" content="Testyn | Home">
     <meta property="og:description" content="This project serves free and beautiful portfolio template for everyone. Anyone can showcase their work including moocs, education, projects, experience,etc. to the world.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://portfolio.smaranjitghose.codes/">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="https://portfolio.smaranjitghose.codes/">
-    <meta name="application-name" content="John Doe | Home" />
-    <meta name="apple-mobile-web-app-title" content="John Doe | Home" />
+    <meta name="application-name" content="Testyn | Home" />
+    <meta name="apple-mobile-web-app-title" content="Testyn | Home" />
     <meta name="summary" content="An open source project aimed at providing free and beautiful templates to everyone for building their portfolio websites and showcase their work to the world." />
     <!--For Dark/Light mode Toggle-->
     <script src="https://code.iconify.design/1/1.0.4/iconify.min.js"></script>
@@ -67,19 +67,19 @@
     </div>
     <center>
         <!-- Home Section -->
-        <div class="text col-sm-6" style="margin-top: 140px;">Hi <span class="wave"><img src="assets/images/Hand.gif" width="35px"></span>&nbsp;, I'm <span class="header">John Doe</span>
+        <div class="text col-sm-6" style="margin-top: 140px;">Hi im, <span class="header">Testyn</span>
             <div class="center">
                 <div>
-                    <img src="assets/images/dp_male.svg" alt="" class="rounded-circle" height="200" width="200">
+                    <img src="assets/images/Testyn.svg" alt="" class="rounded-circle" height="200" width="200">
                 </div>
                 <br/>
                 <span style="display: inline;">I am into <span class="animated-text"
-                    data-words="Designing, UI/UX, Cloud Computing, Web Development, Open Source, Mentoring"></span>
+                    data-words="in game hacking, Manga, and other stuff"></span>
                 </span>
                 <div>
                     <div class="social-icons">
 
-                        <a class="socialicon twitter" href="" target="_blank" rel="author">
+                        <a class="socialicon twitter" href="https://twitter.com/Kadrr123" target="_blank" rel="author">
                             <!-- SVG code for twitter icon -->
                             <svg class="twitter-icon" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 500 500" enable-background="new 0 0 500 500" xml:space="preserve">
                                 <!-- bird body -->
@@ -167,7 +167,7 @@
                             <i class="fab fa-kaggle"></i>
                         </a>
 
-                        <a class="socialicon instagram" href="" target="_blank" rel="author">
+                        <a class="socialicon instagram" href="https://www.instagram.com/the_unknowen_123/" target="_blank" rel="author">
                             <!-- svg code for instagram icon -->
                             <svg class="instagram-icon" x="0px" y="0px" viewBox="0 0 202.5 202.5" style="enable-background:new 0 0 202.5 202.5;">
                                 <circle id="littleCircle" class="st0" cx="101" cy="101.5" r="18.9" />
@@ -178,7 +178,7 @@
                             </svg>
                         </a>
 
-                        <a class="socialicon github" href="" target="_blank" rel="author">
+                        <a class="socialicon github" href="https://github.com/unknowen123" target="_blank" rel="author">
                             <!-- SVG code for Github icon -->
                             <svg class="github-icon" width="45px" height="45px" viewBox="0 0 300 300">
                                 <!-- body -->
